[package]
name = "rabbitmq-tutorials"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = "1.12.0"
lapin = "2.1.1"
tokio = { version = "1.25.0", features = ["macros", "rt", "rt-multi-thread"] }
uuid = { version = "1.3.0", features = ["v4"] }
